@@ -2,6 +2,7 @@ version 0.9.13
  Bugfixes
  * default_encoding config option allows user to specify a default encoding other than ASCII (was a bug for some uses, namely cron jobs).
  * Appropriate intermediate directories are created during authentication token storage.
+ * Catch previously uncaught exception when webbrowser does not find a default or specified browser.
 
 version 0.9.12
  Enhancements
